Hello_mail: send hello mail

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require: rubocop-performance
 
 AllCops:
   Exclude:
+    - config/environments/*
     - config/initializers/devise.rb
     - bin/*
     - Gemfile
