--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 .byebug_history
 .vscode
 /coverage/*
+/public/uploads/*
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
